# accg-rag

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
mini_agent/: __init__.py  agent.py  entity_extractor.py  environment.py  evidence.py  graph_tool.py  model.py  multi_entity.py  narrator.py  query_plan.py  reranker.py  retrieval.py  retrieval_metrics.py  sufficiency.py  tools_schema.py
scripts/: accg_mcp_server.py  analyze_anchors.py  analyze_candidates.py  benchmark_summarize.py  build_summary_index.py  check_class_edges.py  cmp_summarize_models.py  compare_rerank.py  diagnose_retrieval.py  dump_class_graph.py  measure_rerank_quality.py  run_agent.py  run_qa.py
tests/: test_agent_evidence.py  test_agent_graph_tool.py  test_agent_model.py  test_agent_tools_integration.py  test_entity_extraction.py  test_model_function_calling.py  test_multi_entity.py  test_query_plan.py  test_retrieval_metrics.py  test_run_qa.py  test_sufficiency.py  test_tools_schema.py
