[project]
name = "accg-rag"
version = "0.1.0"
description = "ACCG RAG Agent: 基于代码图的 ReAct 检索增强代码问答系统"
requires-python = ">=3.11"
dependencies = [
    "accg @ git+https://github.com/Yoyoblue0000/accg-core.git",
    "networkx>=3.0",
    "openai>=1.0",
]

[tool.setuptools.packages.find]
include = ["mini_agent*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
